--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Portfolio</title>
+    <title>Mike's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div class="title">
+        <h1>Mike's Creative Tech Seminar</h1>
+    </div>
     <div class="grid-container">
         <div class="grid-item">Item 1</div>
         <div class="grid-item">Item 2</div>
@@ -15,4 +18,3 @@
     </div>
 </body>
 </html>
-
