--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
         <h1>Mike's Creative Tech Seminar</h1>
     </div>
     <div class="grid-container">
-        <div class="grid-item">Item 1</div>
-        <div class="grid-item">Item 2</div>
-        <div class="grid-item">Item 3</div>
-        <div class="grid-item">Item 4</div>
-        <div class="grid-item">Item 5</div>
-        <div class="grid-item">Item 6</div>
+        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 1"></div>
+        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 2"></div>
+        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 3"></div>
+        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 4"></div>
+        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 5"></div>
+        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 6"></div>
     </div>
 </body>
 </html>
