added css grid width

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     </div>
     <div class="grid-container">
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 1"></div>
-        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 2"></div>
-        <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 3"></div>
+        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"></div>
+        <div class="grid-item"><img src="nasa-space.jpg" alt="NASA Space 3"></div>
         <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 4"></div>
         <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 5"></div>
         <div class="grid-item"><img src="miketar27/creative-tech-sem.github.io/media/nasa-space.jpg" alt="NASA Space 6"></div>
