--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 3"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 5"></div>
-        <div class="grid-item"><img src="mmedia/nasa-space.jpg" alt="NASA Space 6"></div>
+        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 6"></div>
     </div>
 </body>
 </html>
