--- a/index.html
+++ b/index.html
@@ -18,4 +18,7 @@
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 6"></div>
     </div>
 </body>
+<!-- Import the component -->
+<script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+
 </html>
