--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!-- Use it like any other HTML element -->
 <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" 
 src="miketar27/creative-tech-sem.github.io/media/Cub with soccer ball.glb" 
+</model-viewer>
 
 </body>
 
