--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     
 <!-- Import the component -->
 <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
+ 
+<!-- Model Viewer -->
+<script type="module" src="https://unpkg.com/@google/model-viewer"></script>
 
 <!-- Use it like any other HTML element -->
-<model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" 
-src="miketar27/creative-tech-sem.github.io/media/Cub with soccer ball.glb" 
-</model-viewer>
 
+<model-viewer src="cub-with-soccer-ball.glb" alt="A 3D model of your object" auto-rotate camera-controls ar></model-viewer>
 </body>
 
 </html>
