--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <!-- Use it like any other HTML element -->
 
-<model-viewer src="cub-with-soccer-ball.glb" alt="A 3D model of your object" auto-rotate camera-controls ar></model-viewer>
+<model-viewer src="media/cub-with-soccer-ball.glb" alt="A 3D model of your object" auto-rotate camera-controls ar></model-viewer>
 </body>
 
 </html>
