--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <h1>Mike's Creative Tech Seminar</h1>
     </div>
     <div class="grid-container">
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 1"></div>
+        <div class="grid-item"><img alt="NASA Space 1"> 
+        
+        <model-viewer src="media/cub-with-soccer-ball.glb" alt="A 3D model of your object" auto-rotate camera-controls ar></model-viewer>
+
+        
+        </div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 3"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"></div>
@@ -26,7 +31,6 @@
 
 <!-- Use it like any other HTML element -->
 
-<model-viewer src="media/cub-with-soccer-ball.glb" alt="A 3D model of your object" auto-rotate camera-controls ar></model-viewer>
 </body>
 
 </html>
