--- a/ar.html
+++ b/ar.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <model-viewer src="scene.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls
+        <model-viewer src="clown_fish_low_poly_animated.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls
             tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" autoplay auto-rotate>
 
             <div id="ar-prompt">
