--- a/ar.html
+++ b/ar.html
@@ -17,6 +17,9 @@
             <div id="ar-prompt">
             </div>
         </model-viewer>
+
+        <model-viewer src="media/cub-with-soccer-ball.glb" alt="A 3D model of your object" auto-rotate camera-controls ar></model-viewer>
+
 <p>Animated 3D Model via <a href="https://sketchfab.com/3d-models/koi-fish-f7e2e4858f2f438aa2832566220199f4" target="_blank"> Sketchfab</a></p>
 
     </div>
