--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Mike's Creative Tech Seminar</h1>
     </div>
     <div class="grid-container">
-        <div class="grid-item"><img alt="NASA Space 1"> <a href="ar">PROJECT NAME 1</a></div>
+        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 1"> <a href="ar">PROJECT NAME 1</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 3"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"></div>
