--- a/ar.html
+++ b/ar.html
@@ -30,7 +30,7 @@
 
     <!-- Background Music --> 
     <audio autoplay loop>
-        <source src="media/music.mp3" type="audio/mpeg">
+        <source src="better-day.mp3" type="audio/mpeg">
     </audio>
 
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.4.0/model-viewer.min.js"></script>
