--- a/ar.html
+++ b/ar.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <model-viewer src="clown_fish_low_poly_animated.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls
-            tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" autoplay auto-rotate>
+            tone-mapping="commerce" poster="poster.webp" shadow-intensity="1" autoplay auto-rotate disable-tap>
 
             <div id="ar-prompt">
             </div>
