--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div class="grid-container">
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 1"> <a href="ar">PROJECT NAME 1</a></div>
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"></div>
+        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"> <a href="3d-print">PROJECT NAME 1</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 3"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 5"></div>
