--- a/ai-training.html
+++ b/ai-training.html
@@ -1,16 +1,36 @@
-!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Music</title>
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <style>
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 10px;
+            padding: 10px;
+        }
+        .grid-item {
+            width: 100%;
+        }
+        img {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
-
 <body>
-  
-</body>
 
+<div class="grid-container">
+    <div class="grid-item"><img src="image1.jpg" alt="Image 1"></div>
+    <div class="grid-item"><img src="image2.jpg" alt="Image 2"></div>
+    <div class="grid-item"><img src="image3.jpg" alt="Image 3"></div>
+    <div class="grid-item"><img src="image4.jpg" alt="Image 4"></div>
+    <div class="grid-item"><img src="image5.jpg" alt="Image 5"></div>
+    <div class="grid-item"><img src="image6.jpg" alt="Image 6"></div>
+    <div class="grid-item"><img src="image7.jpg" alt="Image 7"></div>
+    <div class="grid-item"><img src="image8.jpg" alt="Image 8"></div>
+    <div class="grid-item"><img src="image9.jpg" alt="Image 9"></div>
+    <div class="grid-item"><img src="image10.jpg" alt="Image 10"></div>
+</div>
+
+</body>
 </html>
