--- a/ai-training.html
+++ b/ai-training.html
@@ -1,35 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(5, 1fr);
-            gap: 10px;
-            padding: 10px;
-        }
-        .grid-item {
-            width: 100%;
-        }
-        img {
-            width: 100%;
-            height: auto;
-        }
-    </style>
+
 </head>
 <body>
 
-<div class="grid-container">
-    <div class="grid-item"><img src="image1.jpg" alt="Image 1"></div>
-    <div class="grid-item"><img src="image2.jpg" alt="Image 2"></div>
-    <div class="grid-item"><img src="image3.jpg" alt="Image 3"></div>
-    <div class="grid-item"><img src="image4.jpg" alt="Image 4"></div>
-    <div class="grid-item"><img src="image5.jpg" alt="Image 5"></div>
-    <div class="grid-item"><img src="image6.jpg" alt="Image 6"></div>
-    <div class="grid-item"><img src="image7.jpg" alt="Image 7"></div>
-    <div class="grid-item"><img src="image8.jpg" alt="Image 8"></div>
-    <div class="grid-item"><img src="image9.jpg" alt="Image 9"></div>
-    <div class="grid-item"><img src="image10.jpg" alt="Image 10"></div>
+<div class="grid-container2">
+    <div class="grid-item2"><img src="image1.jpg" alt="Image 1"></div>
+    <div class="grid-item2"><img src="image2.jpg" alt="Image 2"></div>
+    <div class="grid-item2"><img src="image3.jpg" alt="Image 3"></div>
+    <div class="grid-item2"><img src="image4.jpg" alt="Image 4"></div>
+    <div class="grid-item2"><img src="image5.jpg" alt="Image 5"></div>
+    <div class="grid-item2"><img src="image6.jpg" alt="Image 6"></div>
+    <div class="grid-item2"><img src="image7.jpg" alt="Image 7"></div>
+    <div class="grid-item2"><img src="image8.jpg" alt="Image 8"></div>
+    <div class="grid-item2"><img src="image9.jpg" alt="Image 9"></div>
+    <div class="grid-item2"><img src="image10.jpg" alt="Image 10"></div>
 </div>
 
 </body>
