metahuman page added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 1"> <a href="ar">Tiger and Soccer Ball AR</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"> <a href="3d-print.html">3D Printed Bulbasaur</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 3"> <a href="ai-training.html">AI Trained Model</a></div>
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"></div>
+        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"> <a href="metahuman.html">Metahuman Model</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 5"></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 6"></div>
     </div>
