Adding Metahuman images

--- a/metahuman.html
+++ b/metahuman.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  
+    <div class="image-container">
+        <img src="media/metahuman-body.png" alt="Metahuman Body">
+        <img src="media/metahuman-face.png" alt="Metahuman Face">
+    </div>
 </body>
 
 </html>
