Big Commit of 2 pages

--- a/3d-print.html
+++ b/3d-print.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-  
+    <div class="image-container">
+        <img src="media/bulbasaur1.jpg" alt="Bulbasaur 1">
+        <img src="media/bulbasaur2.jpg" alt="Bulbasaur 2">
+    </div>
 </body>
 
 </html>
