Front page update

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <h1>Mike's Creative Tech Seminar</h1>
     </div>
     <div class="grid-container">
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 1"> <a href="ar">Tiger and Soccer Ball AR</a></div>
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 2"> <a href="3d-print.html">3D Printed Bulbasaur</a></div>
+        <div class="grid-item"><img src="media/tigerAR.png" alt="NASA Space 1"> <a href="ar">Tiger and Soccer Ball AR</a></div>
+        <div class="grid-item"><img src="media/bulbasaur2.jpg" alt="NASA Space 2"> <a href="3d-print.html">3D Printed Bulbasaur</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 3"> <a href="ai-training.html">AI Trained Model</a></div>
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 4"> <a href="metahuman.html">Metahuman Model</a></div>
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 5"> <a href="bio-art.html">Bio Art</a></div>
+        <div class="grid-item"><img src="media/metahuman-face.png" alt="NASA Space 4"> <a href="metahuman.html">Metahuman Model</a></div>
+        <div class="grid-item"><img src="media/bioart1.jpg" alt="NASA Space 5"> <a href="bio-art.html">Bio Art</a></div>
         <div class="grid-item"><img src="media/nasa-space.jpg" alt="NASA Space 6"></div>
     </div>
     
