--- a/ai-training.html
+++ b/ai-training.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Image Layout</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="media/ai-prompt.png" alt="AI Prompt">
-<div class="grid-container2">
-    <div class="grid-item2"><img src="media/Generate a majestic.jpg" alt="Mountain Image 1"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (1).jpg" alt="Mountain Image 2"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (2).jpg" alt="Mountain Image 3"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (3).jpg" alt="Mountain Image 4"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (4).jpg" alt="Mountain Image 5"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (5).jpg" alt="Mountain Image 6"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (6).jpg" alt="Mountain Image 7"></div>
-    <div class="grid-item2"><img src="media/Generate a majestic (7).jpg" alt="Mountain Image 8"></div>
+
+<div id="top-image">
+  <img src="media/ai-prompt.png" alt="Top Image">
+</div>
+
+<div id="grid-container3">
+  <img src="media/Generate a majestic.jpg" alt="Image 1">
+  <img src="media/Generate a majestic (1).jpg" alt="Image 2">
+  <img src="media/Generate a majestic (2).jpg" alt="Image 3">
+  <img src="media/Generate a majestic (3).jpg" alt="Image 4">
+  <img src="media/Generate a majestic (4).jpg" alt="Image 5">
+  <img src="media/Generate a majestic (5).jpg" alt="Image 6">
+  <img src="media/Generate a majestic (6).jpg" alt="Image 7">
+  <img src="media/Generate a majestic (7).jpg" alt="Image 8">
 </div>
 
 </body>
