Update Language on home page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="title">
-        <h1>Mike's Creative Tech Seminar</h1>
+        <h1>Mike's Portfolio</h1>
     </div>
     <div class="grid-container">
         <div class="grid-item"><img src="media/tigerAR.png" alt="Tiger and Soccer Ball AR"> <a href="ar">Tiger and Soccer Ball AR</a></div>
