--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="grid-container">
         <div class="grid-item"><img src="media/tigerAR.png" alt="Tiger and Soccer Ball AR"> <a href="ar">Tiger and Soccer Ball AR</a></div>
         <div class="grid-item"><img src="media/bulbasaur2.jpg" alt="3D Printed Bulbasaur"> <a href="3d-print.html">3D Printed Bulbasaur</a></div>
-        <div class="grid-item"><img src="media/nasa-space.jpg" alt="AI Trained Model"> <a href="ai-training.html">AI Trained Model</a></div>
+        <div class="grid-item"><img src="media/Generate a majestic (3).jpg" alt="AI Trained Model"> <a href="ai-training.html">AI Trained Model</a></div>
         <div class="grid-item"><img src="media/metahuman-face.png" alt="Metahuman Model"> <a href="metahuman.html">Metahuman Model</a></div>
         <div class="grid-item"><img src="media/bioart1.jpg" alt="Bio Art"> <a href="bio-art.html">Bio Art</a></div>
         <div class="grid-item"><img src="media/gray.png" alt="Empty Space"></div>
